# shaper_homework

./: .clang-format  CMakeLists.txt  README.md  build.sh
include/: Converter.h  Enums.h  I_InputParser.h  I_OutWriter.h  ObjParser.h  Ray.h  StlWriter.h  Triangle.h  Utilities.h
src/: Converter.cpp  I_InputParser.cpp  I_OutWriter.cpp  ObjParser.cpp  StlWriter.cpp  Triangle.cpp  Utilities.cpp  main.cpp
testfiles/: test.stl
